--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <div class="process_text wow slideInLeft" data-wow-delay="900ms" data-wow-duration="0.8s" style="visibility: visible; animation-delay: 700ms; animation-name: slideInLeft;">
                 <p class="colored_heading">The Perfect Night</p>
                 <h1 class="main_heading margin_heading heading_font_sm width">Date Planning</h1>
-                <p class="info info_width">I'd love to meet up and chat about how I can help create the perfect night for your loved one and you!.</p>
+                <p class="info info_width">I'd love to meet up and chat about how I can help create the perfect night for your loved one and you!</p>
             </div>
         </div>
     </div>
@@ -277,7 +277,7 @@
             <div class="process_text wow slideInLeft" data-wow-delay="900ms" data-wow-duration="0.8s" style="visibility: visible; animation-delay: 700ms; animation-name: slideInLeft;">
                 <p class="colored_heading">Magic in the air</p>
                 <h1 class="main_heading margin_heading heading_font_sm width">Special Events</h1>
-                <p class="info info_width">No matter what your dreams are... I can help make them a reality!</p>
+                <p class="info info_width">No matter what your dreams are... I can help make them possible!</p>
             </div>
         </div>
     </div>
