--- a/connect.html
+++ b/connect.html
@@ -231,7 +231,7 @@
                         <li class="footer_list"><a class="black_bold" href="https://www.instagram.com/yeshoneyproposals/"><i class="lab la-instagram"></i></a></li>
                         
                     </ul>
-                    <p class="info footer_text"><i class="far fa-copyright"></i>2021 Yes Honey Proposals. <br><br>Made with love by <a class="info" href="https://caffeinexanxiety.com/">Caffeine &amp; Anxiety</a></p>
+                    <p class="info footer_text"><i class="far fa-copyright"></i>2021 Yes Honey Proposals.</p>
                 </div>
             </div>
         </div>
