--- a/gallery.html
+++ b/gallery.html
@@ -131,7 +131,7 @@
         <div class="overlay">
             <div class="header_tittle">
                 <p class="header_tittle1">Gallery</p>
-                <p class="header_tittle2">Check out some of my favourite pictures of past proposals and dates!</p>
+                <p class="header_tittle2">Check out some of my favorite pictures of past proposals and dates!</p>
             </div>
         </div>
     </div>
@@ -406,7 +406,7 @@
                         <li class="footer_list"><a class="black_bold" href="https://www.instagram.com/yeshoneyproposals/"><i class="lab la-instagram"></i></a></li>
                         
                     </ul>
-                    <p class="info footer_text"><i class="far fa-copyright"></i>2021 Yes Honey Proposals. <br><br>Made with love by <a class="info" href="https://caffeinexanxiety.com/">Caffeine &amp; Anxiety</a></p>
+                    <p class="info footer_text"><i class="far fa-copyright"></i>2021 Yes Honey Proposals.</p>
                 </div>
             </div>
         </div>
