--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- Author -->
     <meta name="author" content="Yes Honey Proposals">
     <!-- description -->
-    <meta name="description" content="Let's plan your steps to forever! Rue Lavender would love to discuss planning your perfect proposal!">
+    <meta name="description" content="Let's plan your first steps to forever! Rue Lavender would love to discuss planning your perfect proposal!">
     <!-- keywords -->
-    <meta name="keywords" content="Yes Honey, Yes Honey Proposals, Proposal Planning Washington, Proposal Planning Seattle, Date Planning Washington, Date Planning Seattle, Special Event Planner, Special Event Planning, Proposal Planner Washington, Proposal Planner Seattle">
+    <meta name="keywords" content="Yes Honey, Yes Honey Proposals, Proposal Planning Washington, Proposal Planning Seattle, Date Planning Washington, Date Planning Seattle, Special Event Planner, Special Event Planning, Proposal Planner Washington, Proposal Planner Seattle, LGBTQ Wedding, LGBTQ">
     <!-- Page Title -->
     <title>Yes Honey Proposals! || Home page</title>
     <link rel="stylesheet" href="vendor/css/jquery.fancybox.min.css">
@@ -157,7 +157,7 @@
                          data-paddingright="[25,25,25,25]"
                          data-paddingbottom="[10,10,10,10]"
                          data-paddingleft="[25,25,25,25]"
-                         style="z-index: 7; white-space: nowrap; font-size: 15px; line-height: 17px; font-weight: 100; color: #ffffff; letter-spacing:0 ;font-family:'Raleway', sans-serif;background:linear-gradient(90deg, rgba(88,86,214,1) 0%, rgba(207,67,202,1) 100%);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">
+                         style="z-index: 7; white-space: nowrap; text-align: center; font-size: 15px; line-height: 17px; font-weight: 100; color: #ffffff; letter-spacing:0 ;font-family:'Raleway', sans-serif;background:linear-gradient(90deg, rgba(88,86,214,1) 0%, rgba(207,67,202,1) 100%);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">
                          Learn More</a>
                     <!-- LAYER NR. 2 -->
                  <!--   <div class="tp-caption   tp-resizeme"
@@ -195,13 +195,13 @@
                          data-responsive_offset="on"
 
                          data-frames='[{"delay":0,"split":"lines","splitdelay":0.05,"speed":3500,"split_direction":"forward","frame":"0","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","split":"lines","splitdelay":0.05,"speed":1000,"split_direction":"forward","frame":"999","to":"y:-50px;opacity:0;","ease":"Power3.easeInOut"}]'
-                         data-textAlign="['inherit','inherit','inherit','inherit']"
+                         data-textAlign="['center','center','center','center']"
                          data-paddingtop="[0,0,0,0]"
                          data-paddingright="[0,0,0,0]"
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 7; white-space: nowrap; font-size: 72px; line-height: 85px; font-weight: 500; color: #ffffff; letter-spacing: 0;font-family:'Raleway', sans-serif;">Let's plan your first<br>steps to forever! </div>
+                         style="z-index: 7; white-space: nowrap; font-size: 72px; line-height: 85px; font-weight: 500; color: #ffffff; letter-spacing: 0;font-family:'Raleway', sans-serif; align-content: center;">Let's plan your first<br>steps to forever! </div>
                 </li>
                
             </ul>
@@ -227,7 +227,7 @@
                         <p class="colored_heading wow fadeInUp" data-wow-delay="400ms" data-wow-duration="0.5s" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">Asking your partner to spend forever with you is one of the most important questions you will ever ask.</p>
                         <h1 class="heading margin_heading wow fadeInUp" data-wow-delay="600ms" data-wow-duration="0.8s" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">I want to help you on your first step to forever.</h1>
                         <p class="info  wow fadeInUp" data-wow-delay="800ms" data-wow-duration="1.3s" style="visibility: visible; animation-delay: 400ms; animation-name: fadeInUp;">During 2020 I realized how much of life can be put on hold or cancelled. Love is not one of them. Proposals, weddings, grand acts of display in the name of love during the pandemic made me realize love can not be cancelled. My wife and I got married in the midst of uncertainty but the one thing that was certain was I want to help other people feel this way. <br><br>A few months later and Yes Honey Proposals was born! I love seeing love stories and I want to help you plan yours!<br><br><span class="mt-3">
-                        I'd love to discuss helping you put on a display of love for your partner!</span></p>
+                        I'd love to discuss helping you put on a display of love for your partner!</span><br><br>This is a safe space for all, especially those within the LGBTQ+ community. Let's celebrate your love loud and proud!</p>
                         <a href="connect.html" class="btn btn-large btn-primary margin_button  wow fadeInUp" data-wow-delay="900ms" data-wow-duration="1s" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">Let's Talk!</a>
                     </div>
                 </div>
